positions and box-modling sidebar

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div id="content-wrapper" class="">
                 <div id="side-bar" class="sidebar-collapse">
                     <ul class="sidebar-nav">
-                        <li></li>
+                        <li><a>frist category <span>+</span></a></li>
                     </ul>
                 </div>
                 <div id="content">
