collapse bar started

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                         <li><a>frist category <span>+</span></a></li>
                     </ul>
                 </div>
+                <div id="magicbar">this is it</div>
                 <div id="content">
                     <div class="container-fluid">
                         <div class="row">
