edit responsive image

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <!-- start page header-->
                 <div id="page-header">
                     <div class="page-header">
-                        <img src="images/ash.png" />
+                        <img class="img-responsive" src="images/ash.png" />
                     </div>
                 </div>
                 <!--end page header-->
